browser: push answer anchor divs up to account for fixed navbar
This enables us to link directly to an answer (from a snippet) without the top of that answer being hidden under the navbar.
Note: we use $uiViewScroll defined in appRouting.js for scrolling to the anchor

--- a/browser/src/app/styles/states/_qnaDoc.scss
+++ b/browser/src/app/styles/states/_qnaDoc.scss
@@ -155,6 +155,12 @@
 
   padding-top: 14px;
 
+  /* push answer anchors up to account for fixed navbar */
+  .ss-answer-anchor {
+    position: relative;
+    top: -1 * ($navbar-height + 20);
+  }
+
   .ss-answer-vote {
     padding-top:6px;
   }
